tmux bar to top and tpm installed

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -29,11 +29,6 @@ set -sg escape-time 1
 set -g base-index 1
 setw -g pane-base-index 1
 
-
-# remap split panes
-# bind | split-window -h
-# bind - split-window -v
-
 # vim style through panes
 bind h select-pane -L
 bind j select-pane -D
@@ -51,4 +46,14 @@ bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
 # vim style movement (PRE [ then hjkl)
-set-window-option mode-keys nvim 
+#set-window-option mode-keys nvim
+set-option -g status-position top
+
+
+
+
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g status-right '%Y-%m-%d %H:%M #{tmux_mode_indicator}'
+
+run '~/.tmux/plugins/tpm/tpm'
