--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,59 +1,43 @@
-# allow reload of this file with PRE r
-bind r source-file ~/.tmux.conf \; display "Reloaded."
-
-# switch prefix to control-a, unmap b, allow double-a to go through
-set -g prefix C-a
 unbind C-b
+set -g prefix C-a
 bind C-a send-prefix
-
-# -r repeat time (Default 500 millis)
-set -g repeat-time 2000
-
-# colors
+set -g base-index 1
+set -g renumber-windows on
+set-option -g allow-rename off
+set -g mouse on
+set -g @continuum-restore 'on'
+set -g @resurrect-processes 'false'
+set -g status-keys vi
+set -g status-interval 1
+set -g status-justify centre
+set-option -sa terminal-overrides ',xterm-256color:RGB'
 set -g default-terminal "screen-256color"
 
-# mouse mode (scrolling, etc)
-# tmux 2.1
-setw -g mouse on
+## Pane Stles
+set -gF pane-border-style 'bg=#{@c-dark},fg=#{@c-dark-white}'
+set -gF pane-active-border-style 'bg=#{@c-dark},fg=#{@c-pink}'
+## Command Styles
+set -gF message-style 'bg=#{@c-dark},fg=#{@c-pink}'
+set -gF message-command-style 'bg=#{@c-dark},fg=#{@c-pink}'
+## Window Switcher
+set -gF mode-style 'bg=#{@c-dark},fg=#{@c-pink}'
 
-# tmux < 2.1
-# setw -g mode-mouse on
-# # set -g mouse-select-pane on
-# set -g mouse-resize-pane on
-# set -g mouse-select-window on
-
-# remove delay
-set -sg escape-time 1
-
-# set {window,pane} index to start at 1
-set -g base-index 1
-setw -g pane-base-index 1
-
-# vim style through panes
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
-
-# vim style through windows (PRE Control-H/L)
-bind -r C-h select-window -t :-
-bind -r C-l select-window -t :+
-
-# vim style through resizing
-bind -r H resize-pane -L 5
-bind -r J resize-pane -D 5
-bind -r K resize-pane -U 5
-bind -r L resize-pane -R 5
-
-# vim style movement (PRE [ then hjkl)
-#set-window-option mode-keys nvim
-set-option -g status-position top
-
-
-
-
+### Plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g status-right '%Y-%m-%d %H:%M #{tmux_mode_indicator}'
+set -g @plugin 'tmux-plugins/tmux-pain-control'
+set -g @plugin 'tmux-plugins/tmux-sessionist'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-online-status'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tmux-net-speed'
+set -g @plugin 'tmux-plugins/tmux-cpu'
+set -g @plugin 'darko-mesaros/aws-tmux'
+set -g @plugin 'dracula/tmux'
 
-run '~/.tmux/plugins/tpm/tpm'
+### Dracule Plugins
+set -g @dracula-plugins "cpu-usage ram-usage git time"
+set -g @dracula-military-time true
+set -g @dracula-show-left-icon session
+run -b '~/.tmux/plugins/tpm/tpm'
