--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -11,5 +11,6 @@
       "rootPatterns": ["go.mod", ".vim/", ".git/", ".hg/"],
       "filetypes": ["go"]
     }
-  }
+  },
+  "coc.preferences.extensionUpdateCheck": "daily"
 }
